[package]
name = "PyRustQIP"
version = "0.1.0"
edition = "2021"

[lib]
name = "py_qip"
crate-type = ["cdylib"]

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"

[dependencies]
qip = "1.0.0-beta.1"

[dependencies.pyo3]
version = "^0.18"
features = ["extension-module"]

[dependencies.numpy]
version = "^0.18"

[dependencies.rand]
version = "^0.8"
features = ["small_rng"]